--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Junior System Administrator</h4>
+              <h4>SDE Intern</h4>
               <h5> FEB 2022 - AUG 2022</h5>
               <p><em>Future Ready Talent, Remote</em></p>
               <ul>
