--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/pic1.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>DevOps Engineer</h3>
@@ -264,7 +264,7 @@
               <h5>AUG 2022 - JAN 2023</h5>
               <p><em>Big Oh Tech, Noida</em></p>
               <ul>
-                <li>Responsible for various DevOps tasks which includes system administration, Deployment with Kubernetes, working with multi clouds such as Azure, AWS and .</li>
+                <li>Responsible for various DevOps tasks which includes system administration, Deployment with Kubernetes, working with multi clouds such as Azure, AWS and DigitalOcean.</li>
                 <li>Implemented Terraform to deploy infrastructure. </li>
                 <li>Monitoring instances with grafana, prometheus and loki</li>
               </ul>
