--- a/index.html
+++ b/index.html
@@ -90,7 +90,10 @@
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
           </div>
-          <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
+          <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left" style="margin-top: 50px;
+            margin-right: 10px;
+            margin-left: 20px;
+            margin-top: 20px;">
             <h3>DevOps Engineer</h3>
             <p class="fst-italic">
               My contact details and some personal details 
