--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 9039857977</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Jabalpur, M.P.</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>24</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master of Computer Application</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master's of Computer Application</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
