--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 9039857977</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Jabalpur, M.P.</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91-9039857977</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Delhi</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>24</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master's of Computer Application</span></li>
                 </ul>
