various changes for betterment

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <h1 class="text-light"><a href="index.html">Abhay Jha</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://github.com/lame-engineer/" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-          <a href="https://medium.com/@abhay.j71" target="_blank" class="medium"><i class="bx bxl-medium"></i></a>
+          <!-- <a href="https://medium.com/@abhay.j71" target="_blank" class="medium"><i class="bx bxl-medium"></i></a> -->
           <a href="https://instagram.com/abhay__.jha?igshid=NTE5MzUyOTU=" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://www.linkedin.com/in/abhay233" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
@@ -70,7 +70,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Abhay Jha</h1>
-      <p>I'm <span class="typed" data-typed-items="DevOps Engineer, Python Developer, Cloud Engineer, SRE, Freelancer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="DevOps Engineer, Python Developer, Cloud Engineer"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -82,8 +82,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Hi, my name is Abhay Jha, and I am a DevOps Engineer with one year of experience. In my role, I have worked closely with development teams and IT operations to ensure the smooth and efficient deployment of software applications in production environments. 
-            Throughout my career, I have gained experience with a range of technologies, including scripting languages, cloud infrastructure, and containerization tools. I am proficient in tools such as GitLab CI, Git, Ansible, Docker, Kubernetes, and AWS.
+          <p>I’m Abhay Jha, a DevOps Engineer with 3 years of hands-on experience in automating deployment workflows, managing cloud infrastructure, and enhancing system reliability. I’m skilled in scripting with Bash and Python, containerization using Docker and Kubernetes, and cloud platforms like AWS. Additionally, I’ve developed a solid understanding of security practices to ensure robust and secure deployments.
           </p>
         </div>
 
@@ -218,7 +217,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>A short and concise summary of my journey so far.</p>
+          <p>My Professional Journey So Far.</p>
         </div>
 
         <div class="row">
@@ -262,13 +261,32 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Associate DevOps Engineer</h4>
-              <h5>AUG 2022 - JAN 2023</h5>
-              <p><em>Big Oh Tech, Noida</em></p>
+              <h4>DevOps Engineer</h4>
+              <h5>JUL 2023 - Present</h5>
+              <p><em>SecNinjaz Technologies LLP, New Delhi</em></p>
               <ul>
-                <li>Responsible for various DevOps tasks which includes system administration, Deployment with Kubernetes, working with multi clouds such as Azure, AWS and DigitalOcean.</li>
-                <li>Implemented Terraform to deploy infrastructure. </li>
-                <li>Monitoring instances with grafana, prometheus and loki</li>
+                <li>Implemented and maintained various DevOps practices to enhance deployment workflows and system reliability.</li>
+                <li>Developed automation scripts using Bash, Python, and Ansible to streamline repetitive server management tasks.</li>
+                <li>Managed the hosting of data-sensitive applications in-house, ensuring high security and compliance with data protection standards.</li>
+                <li>Designed and built a custom server monitoring application to track system performance, resource utilization, and detect anomalies.</li>
+                <li>Performed regular system updates, patches, and configuration management to maintain infrastructure health.</li>
+                <li>Troubleshot and resolved infrastructure-related issues to minimize downtime and improve system stability.</li>
+                <li>Collaborated with cross-functional teams to support CI/CD pipelines and improve deployment processes.</li>
+                <li>Monitored server logs and metrics for proactive issue detection and performance optimization.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Associate DevOps Engineer</h4>
+              <h5>AUG 2022 - JUN 2023</h5>
+              <p><em>CloudNits, Remote</em></p>
+              <ul>
+                <li>Performed various DevOps tasks, including system administration, deployment automation, and infrastructure management.</li>
+                <li>Deployed and managed applications using Kubernetes, ensuring high availability and scalability.</li>
+                <li>Worked with multi-cloud environments, including AWS, Azure, and DigitalOcean, for diverse infrastructure needs.</li>
+                <li>Implemented Terraform to automate infrastructure provisioning and management, following Infrastructure as Code (IaC) best practices.</li>
+                <li>Monitored instances and system performance using Grafana, Prometheus, and Loki for real-time metrics, logging, and alerting.</li>
+                <li>Ensured system reliability through proactive monitoring, incident response, and performance tuning.</li>
+                <li>Collaborated with development teams to streamline CI/CD pipelines and improve deployment workflows.</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -276,10 +294,13 @@
               <h5> FEB 2022 - AUG 2022</h5>
               <p><em>Iksula Private Limited, Mumbai</em></p>
               <ul>
-                <li>Monitoring multiple server instances which were highly scalable and available</li>
-                <li>Worked in Projects like HDFC (India), LEGO (UAE) and eurekaforbes (India)</li>
-                <li>Creating virtual instances (EC2 and AZ VM), containers and configuring networking</li>
-                <li>Using AWS ECS, ECR and ACR for container operations and solving client queries</li>
+                <li>Monitored multiple server instances ensuring high scalability and availability for critical applications.</li>
+                <li>Worked on projects for major clients like HDFC (India), LEGO (UAE), and Eureka Forbes (India), delivering tailored DevOps solutions.</li>
+                <li>Created and managed virtual instances such as AWS EC2 and Azure VMs, along with container deployment and network configuration.</li>
+                <li>Utilized AWS ECS, ECR, and Azure ACR for container operations, including image management and orchestration.</li>
+                <li>Addressed and resolved client queries related to infrastructure, deployment, and performance optimization.</li>
+                <li>Implemented best practices for cloud resource management, ensuring cost-efficiency and system reliability.</li>
+                <li>Collaborated with cross-functional teams to support deployment pipelines and cloud infrastructure automation.</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -287,9 +308,10 @@
               <h5> FEB 2022 - AUG 2022</h5>
               <p><em>Future Ready Talent, Remote</em></p>
               <ul>
-                <li>Developed a bot which returns excel commands according to certain predefined keywords which can be found in the same web app.</li>
-                <li>Learned Microsoft Azure through various learning quests developed by GitHub mentors.</li>
-                <li>Cleared AZ‑900 and AI‑900 certificates.</li>
+                <li>Collaborated in a team of two to develop a bot that returns Excel commands based on predefined keywords within the same web application.</li>
+                <li>Gained hands-on experience with Microsoft Azure by completing various learning quests guided by GitHub mentors.</li>
+                <li>Successfully cleared Microsoft certifications: AZ‑900 (Microsoft Azure Fundamentals) and AI‑900 (Microsoft Azure AI Fundamentals).</li>
+              </ul>
               </ul>
             </div>            
           </div>
