--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
+  <link rel="manifest" href="assets/img/site.webmanifest">
+  
+
+
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -93,9 +98,9 @@
             margin-right: 10px;
             margin-left: 20px;
             margin-top: 20px;">
-            <h3>DevOps Engineer</h3>
+            <h3>My contact details</h3>
             <p class="fst-italic">
-              My contact details and some personal details 
+               
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -103,13 +108,13 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91-9039857977</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Delhi</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>24</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master's of Computer Application</span></li>
+                  <!-- <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master's of Computer Application</span></li> -->
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>abhay.jha-1@protonmail.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                  <!-- <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li> -->
                 </ul>
               </div>
             </div>
@@ -292,7 +297,7 @@
             <div class="resume-item">
               <h4>Junior System Administrator</h4>
               <h5> FEB 2022 - AUG 2022</h5>
-              <p><em>Iksula Private Limited, Mumbai</em></p>
+              <p><em>Iksula Private Limited, Mumbai (Remote)</em></p>
               <ul>
                 <li>Monitored multiple server instances ensuring high scalability and availability for critical applications.</li>
                 <li>Worked on projects for major clients like HDFC (India), LEGO (UAE), and Eureka Forbes (India), delivering tailored DevOps solutions.</li>
@@ -408,7 +413,9 @@
             </div>
           </div>
         </div>
-        <p><a href="https://www.credly.com/users/abhay-jha.303c2662" target="_blank"><strong>View all certificates</strong></a></p>
+        <p><a href="https://www.credly.com/users/abhay-jha.303c2662" target="_blank"><strong>View certificates on credly</strong></a></p>
+        <p><a href="https://learn.microsoft.com/en-us/users/abhayjha-5371/" target="_blank"><strong>View certificates on microsoft learn</strong></a></p>
+        <p><a href="https://www.coursera.org/learner/abhay-jha-6824"target="_blank"><strong>View certificates on coursera</strong></a></p>
 
       </div>
     </section><!-- End Portfolio Section -->
